<resources>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="app_name" translatable="false">DevFinder</string>
    <string name="app_subtitle">Location: %1$s, Stack: %2$s</string>
    <string name="close">CLOSE</string>
    <string name="done">Done</string>
    <string name="failed_data_retrieval">Failed to get data from GitHub! Error: %1$s</string>
    <string name="feature_pending">Coming Soon! This is not yet available!</string>
    <string name="ok">OK</string>
    <string name="photo">Photo</string>
    <string name="profile">Profile</string>
    <string name="profile_share_description">Check out this awesome developer %1$s, %2$s"</string>
    <string name="profile_share_title">Share this developer</string>
    <string name="refreshing">Fetching from GitHub API… %1$s</string>
    <string name="settings">Go to SETTINGS</string>
    <string name="status">Status</string>
    <string name="successful_data_retrieval">Fetched %1$s users from GitHub!</string>
    <string name="url" translatable="false">https://github.com/Username</string>
    <string name="username">Username</string>
</resources>
